2009-05-13  Yael Aharon <yael.aharon@nokia.com>

        Reviewed by Ariya Hidayat.

        Move emitting the signal QWebFrame::urlChanged to FrameLoaderClientQt::dispatchDidCommitLoad().
        This is to ensure that urlChanged() is emitted even if the frame has no title.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDidReceiveTitle):
        (WebCore::FrameLoaderClientQt::dispatchDidCommitLoad):

2009-05-13  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Rubberstamped by Ariya Hidayat.

        Fix coding style: Add {} to contents of if, containing a for loop.

        * Api/qwebelement.cpp:
        (QWebElement::styleProperty):

2009-05-12  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Ariya Hidayat.

        Fixed a possible crash @styleProperty when there is no embedded/external CSS set.

        * Api/qwebelement.cpp:
        (QWebElement::styleProperty):
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::style):

2009-05-12  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Ariya Hidayat.

        Added external CSS test cases to QWebElement::styleProperty() method.

        Also some ::styleProperty() tests cleanup.

        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::style):

2009-05-12  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Ariya Hidayat.

        Many methods were not considering the case of the element not having
        siblings or children when inserting nodes, and thus broke in some
        situations. This patch fixes that.

        * Api/qwebelement.cpp:
        (QWebElement::prependInside):
        (QWebElement::appendOutside):
        (QWebElement::encloseWith):

2009-05-08  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Ariya Hidayat.
