@@ -1,3 +1,10 @@
+2009-05-14  Yael Aharon  <yael.aharon@nokia.com>
+
+        Reviewed by Ariya Hidayat.
+
+        Add a test case for the signal urlChanged().
+        * tests/qwebframe/tst_qwebframe.cpp:
+
 2009-05-13  Yael Aharon <yael.aharon@nokia.com>
 
         Reviewed by Ariya Hidayat.
